--- a/paperServer/pom.xml
+++ b/paperServer/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>sssc-logger</artifactId>
+    <artifactId>paperServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sssc-logger</name>
-    <description>sssc-logger</description>
+    <name>paperServer</name>
+    <description>paperServer</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -71,7 +71,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.4.1</version>
                 <configuration>
-                    <mainClass>com.example.sssclogger.PaperServerApplication</mainClass>
+                    <mainClass>com.example.paperServer.PaperServerApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
