--- a/myAlgorithm/pom.xml
+++ b/myAlgorithm/pom.xml
@@ -53,5 +53,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.70</version>
         </dependency>
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-stable</artifactId>
+            <version>3.6.9</version>
+        </dependency>
     </dependencies>
 </project>
